btn fix align

--- a/src/scss/ui/btn.scss
+++ b/src/scss/ui/btn.scss
@@ -3,7 +3,8 @@
   position: relative;
   bottom: 0;
   display: inline-flex;
-  place-items: center;
+  justify-content: center;
+  align-items: center;
   text-decoration: none;
   vertical-align: middle;
   line-height: $font-base-lh;
